<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navigation"
        app:itemBackground="@color/colorAdminAccent"
        app:itemTextColor="#878682"
        app:itemIconTint="#878682"
        app:menu="@menu/menu_bottom"
        android:layout_alignParentBottom="true" />

    <include layout="@layout/custom_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtViewPatientProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:paddingBottom="10dp"
            android:text="@string/txtViewPatient"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <View
            android:id="@+id/view"
            android:layout_width="370dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            app:layout_constraintVertical_bias="0.82" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="510dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline14"
            app:layout_constraintVertical_bias="0.2"
            tools:layout_editor_absoluteX="0dp">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:iconifiedByDefault="false"
                android:queryBackground="@color/light_grey_table"
                android:queryHint="@string/txtSearch"
                >

            </SearchView>

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="50dp"
                android:background="@color/light_grey_table">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txtId"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txtPerson"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txtMobile"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txtEmail"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txtAge"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valIdNum" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valPersonName" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valMobile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valEmail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valAge" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valIdNum1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valPersonName1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valMobile1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valEmail1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valAge1" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valIdNum2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valPersonName2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valMobile2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valEmail2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/valAge2" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="57dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="151dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>